--- a/source/junitbasic/pom.xml
+++ b/source/junitbasic/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ticketmanor</groupId>
-	<artifactId>miniproject</artifactId>
+	<artifactId>junitbasic</artifactId>
 	<version>0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
