--- a/sourcecode/ex31solution/pom.xml
+++ b/sourcecode/ex31solution/pom.xml
@@ -15,30 +15,29 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hibernate.version>4.0.1.Final</hibernate.version>
+		<eclipselink.version>2.6.0-M3</eclipselink.version>
 	</properties>
 
 	<dependencies>
 
 		<!-- Java EE not needed, just using JPA standalone here. -->
-
-		<!-- Hibernate and its JPA Provider -->
+		<!-- EclipseLink and its JPA Provider -->
 		<dependency>
-			<groupId>org.hibernate.javax.persistence</groupId>
-				<artifactId>hibernate-jpa-2.0-api</artifactId>
-			<version>1.0.1.Final</version>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.core</artifactId>
+			<version>${eclipselink.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.hibernate</groupId>
-				<artifactId>hibernate-entitymanager</artifactId>
-			<version>${hibernate.version}</version>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.jpa</artifactId>
+			<version>${eclipselink.version}</version>
 		</dependency>
 
 		<!-- Database Drivers -->
 		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>2.3.2</version>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.33</version>
 		</dependency>
 
 		<dependency>
