--- a/sourcecode/ex42solution/src/test/resources/jndi.properties
+++ b/sourcecode/ex42solution/src/test/resources/jndi.properties
@@ -2,3 +2,6 @@
 java.naming.factory.initial=org.jboss.naming.remote.client.InitialContextFactory
 #java.naming.provider.url=remote://localhost:4447
 java.naming.provider.url=http-remoting://localhost:8080
+
+java.naming.security.principal=testuser
+java.naming.security.credential=4jelBas
