--- a/sourcecode/ex42solution/pom.xml
+++ b/sourcecode/ex42solution/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.ticketmanor</groupId>
 	<artifactId>ex42</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<inceptionYear>2015</inceptionYear>
 
 	<name>TicketManor JPA and test</name>
