--- a/sourcecode/ex42solution/pom.xml
+++ b/sourcecode/ex42solution/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ticketmanor</groupId>
-	<artifactId>ex42</artifactId>
+	<artifactId>ex42solution</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<inceptionYear>2015</inceptionYear>
