--- a/sourcecode/.gitignore
+++ b/sourcecode/.gitignore
@@ -1,3 +1,8 @@
-ex??
+# Mac
 .DS_Store
+# Generated from *solutions
+ex??
+# Eclipse workspace config/history/logs/etc.
 .metadata
+# New from Eclipse
+.recommenders
