How did this get missed?

--- a/sourcecode/.gitignore
+++ b/sourcecode/.gitignore
@@ -1,9 +1,9 @@
-# Mac
-.DS_Store
-# Generated from *solutions
-ex??
-donow??
-# Eclipse workspace config/history/logs/etc.
-.metadata
-# New from Eclipse
-.recommenders
+donow31
+ex21
+ex31
+ex41
+ex42
+ex51
+ex61
+ex71
+ex81
