--- a/sourcecode/ex41solution/pom.xml
+++ b/sourcecode/ex41solution/pom.xml
@@ -20,16 +20,20 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<javase.version>1.7</javase.version>
+		<javaee.version>7.0</javaee.version>
 		<hibernate.version>4.0.1.Final</hibernate.version>
 	</properties>
 
 	<dependencies>
-	
+
+		<!-- Java EE API -->
 		<dependency>
-			<groupId>com.ticketmanor</groupId>
-			<artifactId>datamodel</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+			<groupId>javax</groupId>    
+			<artifactId>javaee-web-api</artifactId>    
+			<version>${javaee.version}</version>  
+			<scope>provided</scope>
+		</dependency> 
 
 		<!-- JMS -->
 		<dependency>
@@ -46,6 +50,7 @@
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
+
 		<!--
 		 ***  WARNING!!! The version of HornetMQ used here MUST agree with what
 		 *** the WildFly AS is using (which it prints out at start up).
