--- a/sourcecode/ex41bonussolution/pom.xml
+++ b/sourcecode/ex41bonussolution/pom.xml
@@ -27,6 +27,12 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>com.ticketmanor</groupId>
+			<artifactId>datamodel</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<!-- Java EE API -->
 		<dependency>
 			<groupId>javax</groupId>    
