--- a/sourcecode/ex41bonussolution/pom.xml
+++ b/sourcecode/ex41bonussolution/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>com.ticketmanor</groupId>
 	<artifactId>ex41bonussolution</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<inceptionYear>2015</inceptionYear>
 
 	<name>TicketManor JPA and test</name>
@@ -20,7 +20,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<javase.version>1.7</javase.version>
+		<javase.version>1.8</javase.version>
 		<javaee.version>7.0</javaee.version>
 		<hibernate.version>4.0.1.Final</hibernate.version>
 	</properties>
