Remove ad-hoc Customer class; use the one from datamodel.
We thus have to list classes explicitly as they are in a Jar.

--- a/sourcecode/donow31solution/pom.xml
+++ b/sourcecode/donow31solution/pom.xml
@@ -20,6 +20,12 @@
 
 	<dependencies>
 
+		<dependency>
+			<groupId>com.ticketmanor</groupId>
+			<artifactId>datamodel</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<!-- Java EE not needed, just using JPA standalone here. -->
 		<!-- EclipseLink and its JPA Provider -->
 		<dependency>
