--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -5,7 +5,7 @@
  
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.darwinsys</groupId>
-	<artifactId>936-sampples</artifactId>
+	<artifactId>936-samples</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>Random code samples for the Java EE course</name>
