--- a/sourcecode/ex43solution/pom.xml
+++ b/sourcecode/ex43solution/pom.xml
@@ -5,13 +5,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ticketmanor</groupId>
-	<artifactId>ex41bonussolution</artifactId>
+	<artifactId>ex42solution</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<inceptionYear>2015</inceptionYear>
 
-	<name>TicketManor JPA and test</name>
-	<description>JPA Demo</description>
+	<name>TicketManor MDB and test</name>
+	<description>MDB Demo</description>
 	
 	<!-- Note: the "client" here is a test client, so it is
 	in the test folder and its config in src/test/resources,
@@ -20,26 +20,23 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<javase.version>1.8</javase.version>
-		<javaee.version>7.0</javaee.version>
 		<hibernate.version>4.0.1.Final</hibernate.version>
 	</properties>
 
 	<dependencies>
-
+	
 		<dependency>
 			<groupId>com.ticketmanor</groupId>
 			<artifactId>datamodel</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<!-- Java EE API -->
+		<!-- JMS - must be compilable-against for server but provided for test(client) -->
 		<dependency>
-			<groupId>javax</groupId>    
-			<artifactId>javaee-web-api</artifactId>    
-			<version>${javaee.version}</version>  
-			<scope>provided</scope>
-		</dependency> 
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.jms</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 
 		<!-- App-server-dependent Client Stuff -->
 		<dependency>
@@ -49,7 +46,17 @@
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
-
+		<!--
+		 ***  WARNING!!! The version of HornetMQ used here MUST agree with what
+		 *** the WildFly AS is using (which it prints out at start up).
+		 -->
+		<dependency>
+    		<groupId>org.hornetq</groupId>
+    		<artifactId>hornetq-jms-client</artifactId>
+    		<version>2.4.5.Final</version>
+    		<scope>test</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -60,6 +67,7 @@
 	</dependencies>
 
 	<build>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
 		<plugins>
 			<!-- Compiler plugin enforces Java compatibility and activates annotation processors -->
 			<plugin>
