--- a/sourcecode/ex43solution/src/test/resources/jndi.properties
+++ b/sourcecode/ex43solution/src/test/resources/jndi.properties
@@ -1,5 +1,6 @@
 
 java.naming.factory.initial=org.jboss.naming.remote.client.InitialContextFactory
-#java.naming.provider.url=remote://localhost:4447
 java.naming.provider.url=http-remoting://localhost:8080
-jboss.naming.client.ejb.context=true
+
+java.naming.security.principal=testuser
+java.naming.security.credential=4jelBas
