--- a/sourcecode/ex42solution/.project
+++ b/sourcecode/ex42solution/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ex41bonussolution</name>
+	<name>ex42solution</name>
 	<comment></comment>
 	<projects>
 	</projects>
