--- a/sourcecode/ex43clientsolution/pom.xml
+++ b/sourcecode/ex43clientsolution/pom.xml
@@ -7,10 +7,10 @@
 	<groupId>com.ticketmanor</groupId>
 	<artifactId>ex43clientsolution</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<inceptionYear>2015</inceptionYear>
 
-	<name>TicketManor MDB and test</name>
+	<name>TicketManor's Business Partner - MDB client</name>
 	<description>MDB Demo</description>
 	
 	<!-- Note: the client here is a JNDI client
@@ -60,7 +60,6 @@
     		<groupId>org.hornetq</groupId>
     		<artifactId>hornetq-jms-client</artifactId>
     		<version>2.4.5.Final</version>
-    		<scope>test</scope>
 		</dependency>
 		
 	</dependencies>
