--- a/sourcecode/ex43solution/.project
+++ b/sourcecode/ex43solution/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ex31</name>
+	<name>ex43solution</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -56,5 +56,6 @@
 		<nature>org.jboss.tools.jst.web.kb.kbnature</nature>
 		<nature>org.jboss.tools.cdi.core.cdinature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
+		<nature>org.jboss.tools.jsf.jsfnature</nature>
 	</natures>
 </projectDescription>
