--- a/sourcecode/donow21solution/pom.xml
+++ b/sourcecode/donow21solution/pom.xml
@@ -8,6 +8,9 @@
 	<version>0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+	<name>JUnit basic demo</name>
+	<url>https://learningtree.com/936</url>
+
 	<dependencies>
 
         <!-- testing -->
