--- a/sourcecode/ex21solution/pom.xml
+++ b/sourcecode/ex21solution/pom.xml
@@ -8,6 +8,9 @@
 	<version>0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+	<name>JUnit exercise</name>
+	<url>https://learningtree.com/936</url>
+
 	<properties>
 		<javase.version>1.8</javase.version>
 		<maven.compiler.source>${javase.version}</maven.compiler.source>
