--- a/sourcecode/ex31solution/pom.xml
+++ b/sourcecode/ex31solution/pom.xml
@@ -11,7 +11,7 @@
 	<inceptionYear>2015</inceptionYear>
 
 	<name>TicketManor JPA and test</name>
-	<description>JPA Demo</description>
+	<url>https://learningtree.com/936</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
