--- a/sourcecode/ex43clientsolution/pom.xml
+++ b/sourcecode/ex43clientsolution/pom.xml
@@ -11,7 +11,7 @@
 	<inceptionYear>2015</inceptionYear>
 
 	<name>TicketManor's Business Partner - MDB client</name>
-	<description>MDB Demo</description>
+	<url>https://learningtree.com/936</url>
 	
 	<!-- Note: the client here is a JNDI client
 	so it must provide the jndi.properties file to be
