--- a/sourcecode/ex43solution/pom.xml
+++ b/sourcecode/ex43solution/pom.xml
@@ -10,8 +10,8 @@
 	<packaging>war</packaging>
 	<inceptionYear>2015</inceptionYear>
 
-	<name>TicketManor MDB and test</name>
-	<description>MDB Demo</description>
+	<name>TicketManor MDB service and test</name>
+	<url>https://learningtree.com/936</url>
 	
 	<!-- Note: the "client" here is a test client, so it is
 	in the test folder and its config in src/test/resources,
