--- a/sourcecode/ex81solution/src/main/webapp/WEB-INF/web.xml
+++ b/sourcecode/ex81solution/src/main/webapp/WEB-INF/web.xml
@@ -23,4 +23,30 @@
 		<url-pattern>*.web</url-pattern>
 	</servlet-mapping>
 	
+	<security-constraint>
+		<display-name>Checkout/payment Area</display-name>
+		<web-resource-collection>
+			<web-resource-name>Administrative Area</web-resource-name>
+			<url-pattern>/admin/*</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>administrator</role-name>
+		</auth-constraint>
+		<!--
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
+		-->
+	</security-constraint>
+
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<realm-name>Administrative Area</realm-name>
+		<form-login-config>
+			<form-login-page>/login.web</form-login-page>
+			<form-error-page>/loginfailure.web</form-error-page>
+		</form-login-config>
+	</login-config>
+
+
 </web-app>
