--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -2,6 +2,12 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
   	http://maven.apache.org/maven-v4_0_0.xsd">
+
+	<!--
+	 *** Nota Bene: This directory is not for deployment!
+	 *** The pom is only to ensure that the Java code compiles.
+	 *** For real deployment see the complete samples e.g., jsfdemo, jpademo.
+	 -->
  
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.darwinsys</groupId>
