--- a/sourcecode/ex52solution/pom.xml
+++ b/sourcecode/ex52solution/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ticketmanor</groupId>
-	<artifactId>ex42solution</artifactId>
+	<artifactId>ex52solution</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<inceptionYear>2015</inceptionYear>
@@ -13,16 +13,16 @@
 	<name>TicketManor Stateful Session Bean</name>
 	<url>https://learningtree.com/936</url>
 	
-	<!-- Note: the "client" here is a test client, so it is
-	in the test folder and its config in src/test/resources,
-	to avoid polluting the WAR file that is sent to the server.
-	 -->
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<javase.version>1.8</javase.version>
 		<javaee.version>7.0</javaee.version>
-		<hibernate.version>4.0.1.Final</hibernate.version>
+		<maven.compiler.source>${javase.version}</maven.compiler.source>
+		<maven.compiler.target>${javase.version}</maven.compiler.target>
+		<maven.compiler.testSource>${javase.version}</maven.compiler.testSource>
+		<maven.compiler.testTarget>${javase.version}</maven.compiler.testTarget>
+		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
 	</properties>
 
 	<dependencies>
@@ -35,9 +35,9 @@
 
 		<!-- Java EE API -->
 		<dependency>
-			<groupId>javax</groupId>    
-			<artifactId>javaee-web-api</artifactId>    
-			<version>${javaee.version}</version>  
+			<groupId>javax</groupId>
+			<artifactId>javaee-web-api</artifactId>
+			<version>${javaee.version}</version>
 			<scope>provided</scope>
 		</dependency> 
 
@@ -61,14 +61,21 @@
 
 	<build>
 		<plugins>
-			<!-- Compiler plugin enforces Java compatibility and activates annotation processors -->
+
+			<!-- Configure failsafe plugin to run integration tests; not in by default -->
 			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.12.4</version>
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<!-- Java EE AppServer: WildFly -->
