Add datasource file; synch gitignore new project names

--- a/sourcecode/.gitignore
+++ b/sourcecode/.gitignore
@@ -5,11 +5,14 @@ ex31
 ex41
 ex42
 ex43
-ex43client
 ex51
+ex52
+ex53
+ex53client
 ex61
 ex71
 ex81
 ex91
 .recommenders
 RemoteSystemsTempFiles 
+ember
