--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,23 @@
 # Bash scripts need unix endings even on Windoze
 scripts/*    text merge=union eol=lf
 # Tell Github to ignore non-source files
+# Included JavaScript
 sourcecode/ex61solution/src/main/webapp/js/libs/* linguist-vendored
+# Large HTML files generated from AsciiDoc
+troubleshooting.html linguist-documentation
+sourcecode/ex61solution/src/main/webapp/realticketsales.html linguist-documentation
+# API Dox
 apidocs/javaee/com/ticketmanor/* linguist-documentation
-sourcecode/ex61solution/src/main/webapp/realticketsales.html linguist-generated
-troubleshooting.html linguist-generated
+apidocs/javaee/com/ticketmanor/csrchat* linguist-documentation
+apidocs/javaee/com/ticketmanor/csrchat/class-use* linguist-documentation
+apidocs/javaee/com/ticketmanor/dao* linguist-documentation
+apidocs/javaee/com/ticketmanor/dao/class-use* linguist-documentation
+apidocs/javaee/com/ticketmanor/jpa* linguist-documentation
+apidocs/javaee/com/ticketmanor/jpa/class-use* linguist-documentation
+apidocs/javaee/com/ticketmanor/rest* linguist-documentation
+apidocs/javaee/com/ticketmanor/rest/class-use* linguist-documentation
+apidocs/javaee/com/ticketmanor/service* linguist-documentation
+apidocs/javaee/com/ticketmanor/service/class-use* linguist-documentation
+apidocs/javaee/com/ticketmanor/ui* linguist-documentation
+apidocs/javaee/com/ticketmanor/ui/jsf* linguist-documentation
+apidocs/javaee/com/ticketmanor/ui/jsf/class-use* linguist-documentation
