Put "LT-JavaEE" afront all <name> in exercises, for consistency.
Avoided using "LT936" because it's also in G979 and customs.

--- a/sourcecode/ex52solution/pom.xml
+++ b/sourcecode/ex52solution/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>war</packaging>
 	<inceptionYear>2015</inceptionYear>
 
-	<name>TicketManor Stateful Session Bean</name>
+	<name>LT-JaveEE Stateful Session Bean</name>
 	<url>https://learningtree.com/936</url>
 	
 	<properties>
