--- a/sourcecode/ex81solution/pom.xml
+++ b/sourcecode/ex81solution/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>war</packaging>
 	<inceptionYear>2015</inceptionYear>
 
-	<name>Container Managed Security</name>
+	<name>LT-JaveEE Container Managed Security</name>
 	<url>https://learningtree.com/936</url>
 
 	<properties>
