--- a/sourcecode/donow21solution/pom.xml
+++ b/sourcecode/donow21solution/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>JUnit basic demo</name>
+	<name>LT-JaveEE JUnit basic demo</name>
 	<url>https://learningtree.com/936</url>
 
 	<dependencies>
