--- a/sourcecode/ex21solution/pom.xml
+++ b/sourcecode/ex21solution/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>JUnit exercise</name>
+	<name>LT-JaveEE JUnit exercise</name>
 	<url>https://learningtree.com/936</url>
 
 	<properties>
