--- a/sourcecode/ex31solution/pom.xml
+++ b/sourcecode/ex31solution/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>jar</packaging>
 	<inceptionYear>2015</inceptionYear>
 
-	<name>TicketManor JPA and test</name>
+	<name>LT-JaveEE JPA and test</name>
 	<url>https://learningtree.com/936</url>
 
 	<properties>
