--- a/sourcecode/ex41solution/pom.xml
+++ b/sourcecode/ex41solution/pom.xml
@@ -9,7 +9,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>TicketManor JPA </name>
+	<name>LT-JaveEE JPA </name>
 	<url>https://learningtree.com/936</url>
 
 	<properties>
