--- a/sourcecode/ex51solution/pom.xml
+++ b/sourcecode/ex51solution/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>jar</packaging>
 	<inceptionYear>2015</inceptionYear>
 
-	<name>TicketManor Stateless Session Bean</name>
+	<name>LT-JaveEE Stateless Session Bean</name>
 	<url>https://learningtree.com/936</url>
 	
 	<properties>
