--- a/sourcecode/ex61solution/pom.xml
+++ b/sourcecode/ex61solution/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 
-	<name>JSF UI for TicketManor</name>
+	<name>LT-JaveEE JSF UI for TicketManor</name>
 	<url>https://learningtree.com/936</url>
 
 	<properties>
