--- a/samples_ee8/.gitignore
+++ b/samples_ee8/.gitignore
@@ -1,1 +1,1 @@
-target/936-samples-ee8-1.0-SNAPSHOT target/936-samples-ee8-1.0-SNAPSHOT.war target/classes target/generated-sources target/generated-test-sources target/maven-archiver target/maven-status target/surefire-reports target/test-classes
+target/
