--- a/samples_ee8/pom.xml
+++ b/samples_ee8/pom.xml
@@ -38,7 +38,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>5.0</version>
+			<version>6.1</version>
 		</dependency>
 		<dependency>
 			<groupId>rome</groupId>
@@ -50,7 +50,7 @@
 		<dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-core</artifactId>
-		  <version>4.3.7.Final</version>
+		  <version>5.2.12.Final</version>
 		  <scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -62,7 +62,7 @@
 		<dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-entitymanager</artifactId>
-		  <version>4.3.7.Final</version>
+		  <version>5.2.12.Final</version>
 		  <scope>provided</scope>
 		</dependency>
 
@@ -79,7 +79,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.34</version>
+			<version>8.0.8</version>
 		</dependency>
 		
 	</dependencies>
@@ -89,7 +89,7 @@
 		   <plugin>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.2</version>
+			<version>3.6.0</version>
 			<configuration>
 				<source>1.8</source>
 				<target>1.8</target>
@@ -100,7 +100,7 @@
 			<plugin>
 				<groupId>org.wildfly.plugins</groupId>
 				<artifactId>wildfly-maven-plugin</artifactId>
-				<version>1.0.2.Final</version>
+				<version>1.2.1.Final</version>
 			</plugin>
 
 			<!-- Java EE AppServer: GlassFish (see https://maven-glassfish-plugin.java.net/usage.html) -->
@@ -108,15 +108,27 @@
 				<groupId>org.glassfish.maven.plugin</groupId>
 				<artifactId>maven-glassfish-plugin</artifactId>
 				<version>2.1</version>
+				<configuration>
+					<glassfishDirectory>/glassfish4/glassfish</glassfishDirectory>
+					<adminPassword>crs396Admin</adminPassword>
+					<components>
+						<component>
+							<name>${project.artifactId}</name>
+							<artifact>target/${project.build.finalName}.war</artifact>
+						</component>
+                    </components>
+                    <debug>true</debug>
+					<domain><name>domain1</name></domain>
+				</configuration>
 			</plugin>
 
 			<!-- Java EE AppServer: TomEE (see http://tomee.apache.org/tomee-maven-plugin.html) -->
 			<plugin>
 				<groupId>org.apache.openejb.maven</groupId>
 				<artifactId>tomee-maven-plugin</artifactId>
-				<version>1.7.1</version>
+				<version>1.7.5</version>
 				<configuration>
-					<tomeeVersion>1.7.1</tomeeVersion>
+					<tomeeVersion>1.7.5</tomeeVersion>
 					<tomeeClassifier>plus</tomeeClassifier>
 				</configuration>
 			</plugin>
