--- a/samples_ee8/pom.xml
+++ b/samples_ee8/pom.xml
@@ -109,8 +109,8 @@
 				<artifactId>maven-glassfish-plugin</artifactId>
 				<version>2.1</version>
 				<configuration>
-					<glassfishDirectory>/glassfish4/glassfish</glassfishDirectory>
-					<adminPassword>crs396Admin</adminPassword>
+				<glassfishDirectory>${local.glassfish.home}</glassfishDirectory>
+				<adminPassword>${local.glassfish.password}</adminPassword>
 					<components>
 						<component>
 							<name>${project.artifactId}</name>
