--- a/samples_ee8/pom.xml
+++ b/samples_ee8/pom.xml
@@ -17,6 +17,11 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
+		<javase.version>1.8</javase.version>
+		<maven.compiler.source>${javase.version}</maven.compiler.source>
+		<maven.compiler.target>${javase.version}</maven.compiler.target>
+		<maven.compiler.testSource>${javase.version}</maven.compiler.testSource>
+		<maven.compiler.testTarget>${javase.version}</maven.compiler.testTarget>
 	</properties>
 
 	<dependencies>
@@ -29,8 +34,8 @@
 
 		<!-- Java EE API -->
 		<dependency>
-		   <groupId>javax</groupId>    
-			<artifactId>javaee-api</artifactId>    
+		   <groupId>javax</groupId>	
+			<artifactId>javaee-api</artifactId>	
 			<version>8.0</version>  
 		</dependency> 
 
@@ -66,14 +71,14 @@
 		  <scope>provided</scope>
 		</dependency>
 
-        <!-- testing -->
-        <dependency>
-            <groupId>org.junit.platform</groupId>
+		<!-- testing -->
+		<dependency>
+			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-console-standalone</artifactId>
 			<!-- This is what we think of as JUnit 5; new numbering, sigh. -->
 			<version>1.1.0-M1</version>
-            <scope>test</scope>
-        </dependency>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Database driver -->
 		<dependency>
@@ -86,15 +91,6 @@
  
 	<build>
 		<plugins>
-		   <plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.6.0</version>
-			<configuration>
-				<source>1.8</source>
-				<target>1.8</target>
-			</configuration>
-		   </plugin>
 
 			<!-- Java EE AppServer: WildFly -->
 			<plugin>
@@ -116,9 +112,35 @@
 							<name>${project.artifactId}</name>
 							<artifact>target/${project.build.finalName}.war</artifact>
 						</component>
-                    </components>
-                    <debug>true</debug>
+					</components>
+					<debug>true</debug>
 					<domain><name>domain1</name></domain>
+				</configuration>
+			</plugin>
+
+			<!-- IBM liberty-maven-plugin -->
+			<plugin>
+				<groupId>net.wasdev.wlp.maven.plugins</groupId>
+				<artifactId>liberty-maven-plugin</artifactId>
+				<version>2.0</version>
+				<configuration>
+				<execution>
+					<id>deploy-app</id>
+					<phase>pre-integration-test</phase>
+					<goals>
+						<goal>deploy</goal>
+					</goals>
+					<configuration>
+						<appArchive>${project.artifactId}.war</appArchive>
+					</configuration>
+					<appArtifact>
+						<groupId>${project.groupId}</groupId>
+						<artifactId>${project.artifactId}</artifactId>
+						<version>${project.version}</version>
+						<type>war</type>
+					</appArtifact>
+					<appDeployName>${project.artifactId}.war</appDeployName>
+				</execution>
 				</configuration>
 			</plugin>
 
