Remove unused variables; comment why file still exists, for now.

--- a/sourcecode/ex61solution/src/main/resources/resources.properties
+++ b/sourcecode/ex61solution/src/main/resources/resources.properties
@@ -1,6 +1,2 @@
-events_button==Search
-askforname_switchLanguage=Note: If you change your browser's default language \
-	to French or Spanish and simply re-load this page, \
-	you should see the text in that language..
-
-no_results_found=No matching records found.
+# This file is not used in this project but is referred to by a bunch
+# of JSF pages so it's easier to leave it here.
