--- a/sourcecode/ex61solution/pom.xml
+++ b/sourcecode/ex61solution/pom.xml
@@ -28,27 +28,27 @@
 		<dependency>
 		   <groupId>javax</groupId>    
 			<artifactId>javaee-web-api</artifactId>    
-			<version>7.0</version>  
+			<version>7.0</version>
 		</dependency> 
  
 		<!-- PrimeFaces JSF Add-on -->
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>4.0</version>
+			<version>6.1</version>
 		</dependency>
 
 		<!-- Hibernate not needed in WildFly as it is included, but prob. needed on other App Servers-->
 		<dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-core</artifactId>
-		  <version>4.3.7.Final</version>
+		  <version>5.2.12.Final</version>
 		  <scope>provided</scope>
 		</dependency>
 		<dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-entitymanager</artifactId>
-		  <version>4.3.7.Final</version>
+		  <version>5.2.12.Final</version>
 		  <scope>provided</scope>
 		</dependency>
 
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
 
@@ -65,6 +65,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.34</version>
+			<scope>provided</scope>
 		</dependency>
 		
 	</dependencies>
