--- a/sourcecode/ex31solution/pom.xml
+++ b/sourcecode/ex31solution/pom.xml
@@ -5,7 +5,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ticketmanor</groupId>
-	<artifactId>ex31</artifactId>
+	<artifactId>ex31solution</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<inceptionYear>2015</inceptionYear>
