--- a/sourcecode/samples_ee8/.project
+++ b/sourcecode/samples_ee8/.project
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>936-samples</name>
+	<name>936-samples-ee8</name>
 	<comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
 	<projects>
+		<project>datamodel</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
