--- a/sourcecode/samples_ee8/pom.xml
+++ b/sourcecode/samples_ee8/pom.xml
@@ -82,9 +82,15 @@
 
 		<!-- Database driver -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.8</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.4.1212.jre7</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.185</version>
+			<scope>test</scope>
 		</dependency>
 		
 	</dependencies>
