Put better name elements

--- a/sourcecode/ex42solution/pom.xml
+++ b/sourcecode/ex42solution/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 	<inceptionYear>2008</inceptionYear>
 
-	<name>Exercise 4.2</name>
+	<name>LT-JaveEE JPA: Inheritance</name>
 	<description>Exercise 4.2</description>
 
 	<properties>
