--- a/sourcecode/ex41solution/pom.xml
+++ b/sourcecode/ex41solution/pom.xml
@@ -8,7 +8,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>LT-JaveEE JPA </name>
+	<name>LT-JaveEE JPA: Aggregation</name>
 	<url>https://learningtree.com/936</url>
 
 	<properties>
