--- a/sourcecode/ex53clientsolution/src/main/resources/jndi.properties
+++ b/sourcecode/ex53clientsolution/src/main/resources/jndi.properties
@@ -1,8 +1,5 @@
 
-java.naming.factory.initial=org.jboss.naming.remote.client.InitialContextFactory
-# Use this when client api 11 is compatible with wildfly server 11
-# see https://issues.jboss.org/browse/JBEAP-14006 (for RH EAP but same issue).
-# java.naming.factory.initial=org.wildfly.naming.client.WildFlyInitialContextFactory
+java.naming.factory.initial=org.wildfly.naming.client.WildFlyInitialContextFactory
 java.naming.provider.url=http-remoting://localhost:8080
 
 java.naming.security.principal=testuser
