--- a/sourcecode/ex53clientsolution/pom.xml
+++ b/sourcecode/ex53clientsolution/pom.xml
@@ -38,11 +38,18 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
+		<!-- Something depends on slf4j -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.8.0-beta4</version>
+		</dependency>
+
 		<!-- App-server-dependent Client Stuff -->
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-jms-client-bom</artifactId>
-			<version>11.0.0.Final</version>
+			<version>16.0.0.Final</version>
 			<type>pom</type>
 		</dependency>
 
@@ -57,7 +64,7 @@
 				<version>1.6.0</version>
 				<executions>
 					<execution>
-						<id>my-execution</id>
+						<id>client-execution</id>
 						<phase>package</phase>
 						<goals>
 							<goal>java</goal>
