--- a/sourcecode/donow31solution/pom.xml
+++ b/sourcecode/donow31solution/pom.xml
@@ -4,6 +4,12 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.ticketmanor</groupId>
+		<artifactId>sourcecode</artifactId>
+		<version>1.0</version>
+	</parent>
+
 	<groupId>com.ticketmanor</groupId>
 	<artifactId>donow31</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -57,14 +63,6 @@
             <artifactId>h2</artifactId>
             <version>1.4.199</version>
         </dependency>
-
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
-		</dependency>
 
 	</dependencies>
 
