--- a/sourcecode/ex21solution/pom.xml
+++ b/sourcecode/ex21solution/pom.xml
@@ -3,6 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.ticketmanor</groupId>
+		<artifactId>sourcecode</artifactId>
+		<version>1.0</version>
+	</parent>
+
 	<groupId>com.ticketmanor</groupId>
 	<artifactId>ex21solution</artifactId>
 	<version>0.0-SNAPSHOT</version>
@@ -26,14 +32,6 @@
 			<artifactId>datamodel</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
-        <!-- testing -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.1</version>
-            <scope>test</scope>
-        </dependency>
 
 	</dependencies>
 
