--- a/sourcecode/ex42solution/pom.xml
+++ b/sourcecode/ex42solution/pom.xml
@@ -3,6 +3,12 @@
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.ticketmanor</groupId>
+		<artifactId>sourcecode</artifactId>
+		<version>1.0</version>
+	</parent>
+
 	<groupId>com.ticketmanor</groupId>
 	<artifactId>ex42solution</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
@@ -87,14 +93,6 @@
 			<version>42.2.5.jre7</version>
 		</dependency>
 		
-		<!-- Testing... -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
-		</dependency>
-
 	</dependencies>
 
 	<build>
