--- a/sourcecode/ex51solution/pom.xml
+++ b/sourcecode/ex51solution/pom.xml
@@ -1,8 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>com.ticketmanor</groupId>
+		<artifactId>sourcecode</artifactId>
+		<version>1.0</version>
+	</parent>
 
 	<groupId>com.ticketmanor</groupId>
 	<artifactId>ex51solution</artifactId>
@@ -55,13 +60,6 @@
     		<scope>test</scope>
 		</dependency>
 		
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>(4.8,5.0)</version>
-			<scope>test</scope>
-		</dependency>
-
 	</dependencies>
 
 	<build>
