--- a/sourcecode/ex71solution/pom.xml
+++ b/sourcecode/ex71solution/pom.xml
@@ -4,6 +4,12 @@
 	http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<parent>
+		<groupId>com.ticketmanor</groupId>
+		<artifactId>sourcecode</artifactId>
+		<version>1.0</version>
+	</parent>
+
 	<groupId>com.ticketmanor</groupId>
 	<artifactId>ex71solution</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -71,14 +77,6 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson-provider</artifactId>
 			<version>4.0.0.Beta1</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- And speaking of tests... -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
 
