--- a/sourcecode/ex53clientsolution/pom.xml
+++ b/sourcecode/ex53clientsolution/pom.xml
@@ -47,14 +47,14 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-jdk14</artifactId>
-			<version>1.8.0-beta4</version>
+			<version>2.0.7</version>
 		</dependency>
 
 		<!-- App-server-dependent Client Stuff -->
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-jms-client-bom</artifactId>
-			<version>16.0.0.Final</version>
+			<version>28.0.1.Final</version>
 			<type>pom</type>
 		</dependency>
 
