--- a/sourcecode/ex53solution/pom.xml
+++ b/sourcecode/ex53solution/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>8.0</version>
+			<version>8.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>6.1</version>
+			<version>13.0.0-RC2</version>
 		</dependency>
 
 	</dependencies>
